@@ -7,6 +7,7 @@
 - Improved: Display a warning if stock feature is disabled (#139)
 - Improved: Actions in product overview bottom sheet are more reachable
 - Improved: Few design tweaks on product overview sheet and in shopping mode
+- Improved: Hide quantity unit field on shopping list item page if there is only one
 - Improved: Updated translations
 - Fixed: Menus were not displayed after first app start (#365)
 - Fixed: Inactive products now cannot be added to shopping list (#398)
